--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+$purple: #413f8d;
+$purple-dark: #292859;
+$teal: #00a690;
+
+
 .center-screen {
   display: flex;
   flex-direction: column;
@@ -5,4 +10,29 @@
   align-items: center;
   text-align: center;
   min-height: 100vh;
+}
+
+.mui-btn {
+  color: white;
+  background-color: $purple;
+
+  &:hover,
+  &:active,
+  &:focus {
+    color: white;
+    background-color: $purple-dark;
+  }
+}
+
+.mui-textfield input {
+  text-align: center;
+
+  &:focus,
+  &:active {
+    border-bottom-color: $teal;
+
+    + label {
+      color: $teal;
+    }
+  }
 }
